# birthdays-to-slack

./: .dev-setup  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.test  Makefile  README.md  SECURITY.md  WATCHTOWER_AUTH_FIX_SUMMARY.md  add-docker-config-env.sh  birthdaybot.py  deploy-smart.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  fix-watchtower-ghcr-auth.sh  fix-watchtower-simple.sh  fix_watchtower_auth.py  pyproject.toml  recreate-watchtower-containers.sh  requirements-dev.txt  requirements.txt  run_tests.py  sync-deploy.sh  test_birthdaybot.py  test_slack_integration.py  verify-ghcr-auth.sh  version.json
.claude/: settings.local.json
.github/workflows/: build-and-deploy.yml  ci.yml
birthday_bot/: __init__.py  __main__.py  alias_manager.py  app.py  message_generator.py  service.py
birthday_bot/static/css/: style.css
birthday_bot/static/js/: app-enhanced.js  app.js
birthday_bot/templates/: base.html  index.html
certs/: ldapcertificate.crt  ldapcertificate.key
copilot/: .workspace
copilot/birthdays-to-slack/: manifest.yml
copilot/environments/production/: manifest.yml
copilot/pipelines/birthdays-to-slack-main/: buildspec.yml  manifest.yml
deploy/: .env.example  .gitignore  README.md  clear-messages.sh  deploy.sh  docker-compose.yml  fix-permissions.sh  trigger-update.sh
docs/: .gitkeep  BACKUP_STRATEGY.md  CREDENTIAL_ROTATION_PLAN.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_WORKFLOW.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  POST_REMEDIATION_CHECKLIST.md  PREVENTION_GUIDE.md  PRODUCTION_SETUP.md  QUICK_REFERENCE.md  README.md  REMEDIATION_GUIDE.md  ROTATION_QUICK_REFERENCE.md  SECRETS_MANAGEMENT.md  SECURITY_AUDIT_2025-11-10.md  SECURITY_INCIDENT_REPORT.md  SECURITY_INCIDENT_RESPONSE.md  SECURITY_OVERVIEW.md  TEAM_ONBOARDING_CHECKLIST.md
prompts/: .gitignore  README.md  default.txt
scripts/: .gitkeep  setup-watchtower-secrets.sh
tests/: __init__.py  conftest.py  test_alias_manager.py  test_app.py  test_message_generator.py  test_service.py
